test/cli/test/ack/deny-retain-ack-resources-deletion/test/test-resources.yaml
apiVersion: s3.services.k8s.aws/v1alpha1
kind: Bucket
metadata:
  name: test-0001-obj-store-retain
  namespace: test-namespace
  annotations:
    services.k8s.aws/deletion-policy: retain
---
apiVersion: s3.services.k8s.aws/v1alpha1
kind: Bucket
metadata:
  name: test-0001-obj-store-retain-create
  namespace: test-namespace
  annotations:
    services.k8s.aws/deletion-policy: retain
---
apiVersion: s3.services.k8s.aws/v1alpha1
kind: Bucket
metadata:
  name: test-0001-obj-store-retain-update
  namespace: test-namespace
  annotations:
    services.k8s.aws/deletion-policy: retain
---
apiVersion: s3.services.k8s.aws/v1alpha1
kind: Bucket
metadata:
  name: test-0001-obj-store-no-retain
  namespace: test-namespace
---
apiVersion: s3.services.k8s.aws/v1alpha1
kind: Bucket
metadata:
  name: test-0001-obj-store-retain-with-bypass-annotation
  namespace: test-namespace
  annotations:
    services.k8s.aws/deletion-policy: retain
    deliveryhero.io/bypass: enable
---
apiVersion: dynamodb.services.k8s.aws/v1alpha1
kind: Table
metadata:
  name: test-0001-dynamodb
  namespace: test-namespace
  annotations:
    services.k8s.aws/deletion-policy: retain
