test/cli/test/ack/deny-retain-ack-resources-deletion/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: deny-retain-ack-resources-deletion-test
policies:
  - policy.yaml
resources:
  - test/test-resources.yaml
variables: test/values.yaml
results:
  - kind: Bucket
    namespace: test-namespace
    policy: deny-retain-ack-resources-deletion
    rule: deny-retain-ack-resources-deletion
    resources:
      - test-0001-obj-store-retain
    result: fail
  - kind: Bucket
    namespace: test-namespace
    policy: deny-retain-ack-resources-deletion
    rule: deny-retain-ack-resources-deletion
    resources:
      - test-0001-obj-store-no-retain
      - test-0001-obj-store-retain-with-bypass-annotation
    result: skip
  - kind: Bucket
    namespace: test-namespace
    policy: deny-retain-ack-resources-deletion
    rule: deny-retain-ack-resources-deletion
    resources:
      - test-0001-obj-store-retain-create
      - test-0001-obj-store-retain-update
    result: pass
  - kind: Table
    namespace: test-namespace
    policy: deny-retain-ack-resources-deletion
    rule: deny-retain-ack-resources-deletion
    resources:
      - test-0001-dynamodb
    result: fail
